--- a/babel.cfg
+++ b/babel.cfg
@@ -2,10 +2,6 @@
 
 [lingua_xml: **.pt]
 
-[lingua_zcml: **.zcml]
-
-
 [extractors]
-lingua_python = lingua.extractors.python:extract_python
-lingua_xml = lingua.extractors.xml:extract_xml
-lingua_zcml = lingua.extractors.zcml:extract_zcml
+lingua_xml = nti.utils.babel:extract_xml
+lingua_python = nti.utils.babel:extract_python
