--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,19 @@
-# Tox (http://tox.testrun.org/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
-envlist = pypy, py27
-usedevelop = True
+envlist =
+   py27,py36,pypy,pypy3,docs
 
 [testenv]
+usedevelop = true
 deps =
-    nose
-	pyhamcrest
-	file:../../../../nti.testing#egg=nti.testing
-
-
-setenv =
-	PIP_USE_MIRRORS=true
-	PIP_EGG=true
-	PIP_DOWNLOAD_CACHE={homedir}/VirtualEnvs/pip-cache
-	CHAMELEON_CACHE={envbindir}
+     .[test]
+	 coverage
 
 commands =
-		 python setup.py develop
-		 nosetests [] # substitute with tox positional args
+    coverage run -m zope.testrunner --test-path=src [] # substitute with tox positional args
+	coverage report --fail-under=100
+
+[testenv:docs]
+commands =
+    sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
+deps =
+    .[docs]
